fix HUGE dragging performance issue on firefox

--- a/src/style/browser-action.scss
+++ b/src/style/browser-action.scss
@@ -132,8 +132,10 @@
 
     #body{
         display: block;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+        //width: 100vw;    <----- Causes an huge performance issue while dragging on firefox
+        //height: 100vh;   <--'
         position: fixed;
         top: 0;
         left: 0;
